--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
-    "build": "echo 'No build step for basic Node.js API'"
+    "dev": "nodemon",
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,7 +14,12 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.0",
+    "ts-node": "^10.9.0",
+    "@types/node": "^20.10.0",
+    "@types/express": "^4.17.0",
+    "@types/cors": "^2.8.0"
   },
   "type": "module"
 }
