--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
     "removeComments": true,
     "resolveJsonModule": true,
-    "allowImportingTsExtensions": false
+    "allowImportingTsExtensions": false,
+    "noImplicitAny": false
   },
   "include": [
     "**/*.ts"
@@ -25,6 +26,7 @@
     "dist"
   ],
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
