✨ feat: Implement various utility hooks and services for API interactions, data formatting, and ref management
- Added `useDebouncedCallback` hook for debouncing function calls.
- Introduced `composeRefs` and `useComposedRefs` for managing multiple refs.
- Developed `data-table` utilities for handling column pinning, filtering, and sorting.
- Created `formatDate` utility for consistent date formatting.
- Implemented `useAPI` hook for handling API requests with loading and error states.
- Added specialized hooks for authentication and faculty management.
- Introduced `generateId` function for unique ID generation.
- Developed parsers for sorting and filtering states using Zod for validation.
- Created `AuthAPI` and `FacultyAPI` services for handling authentication and faculty-related operations.
- Updated Tailwind CSS configuration for improved styling and theming.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "pnpm run --recursive build",
     "start": "pnpm run --parallel start",
     "lint": "pnpm run --recursive lint",
-    "dev:frontend": "pnpm --filter frontend dev",
+    "dev:app": "pnpm --filter frontend dev",
     "dev:api": "pnpm --filter api dev",
-    "build:frontend": "pnpm --filter frontend build",
+    "build:app": "pnpm --filter frontend build",
     "build:api": "pnpm --filter api build"
   },
   "devDependencies": {},
